# leftwm-config

./: .gitignore  Cargo.toml  README.md  TODO  \  actions.sh  build.rs  clippy.sh  config.txt
.github/workflows/: release.yml  rust.yml
leftwm-config/: Cargo.toml
leftwm-config-core/: Cargo.toml
leftwm-config-core/src/: check.rs  command.rs  filehandler.rs  keybind.rs  keydaemon_config.rs  layout.rs  lib.rs  structs.rs  wayland_config.rs  wm_config.rs
leftwm-config-core/src/utils/: mod.rs
leftwm-config/src/: config.rs  main.rs
leftwm-config/src/config/: command.rs  values.rs
leftwm-config/src/tui/: mod.rs
leftwm-config/src/tui/popups/: focus_behavior.rs  insert_behavior.rs  layout_mode.rs  layouts.rs  max_window_width.rs  modkey.rs  mousekey.rs  state_path.rs  toggle_value.rs
src/: main.rs
src/config/: check.rs  command.rs  default.rs  filehandler.rs  keybind.rs  layout.rs  mod.rs  modifier.rs  structs.rs  values.rs
src/config/filehandler/: guess.rs  mod.rs  ron.rs
src/tui/: home_view.rs  key_handler.rs  mod.rs  model.rs  popups.rs
src/tui/popups/: backend.rs  create_follow_cursor.rs  doc_block.rs  enum_selector.rs  focus_behavior.rs  focus_on_activation.rs  insert_behavior.rs  layout_mode.rs  layouts.rs  log_level.rs  max_window_width.rs  mod.rs  modkey.rs  mousekey.rs  state_path.rs  toggle_value.rs  window_hiding_strategy.rs
src/utils/: mod.rs  popups.rs  popups_home.rs  popups_workspaces.rs  tui.rs  x11_keys.rs  xkeysym_lookup.rs
