[package]
name = "leftwm-config"
version = "0.1.0"
authors = ["BlackDragon2447 <blackdragon2447@e.email>"]
edition = "2021"
license = "MIT"
readme = "README.md"
#description = "A window manager for Adventurers"

[dependencies]
anyhow = {version="1.0.69", features=["backtrace"]}
clap = "3.2.22"
# clap = "4.1.0"
xdg = "2.4.1"
serde = { version = "1.0.152", features = ["derive", "rc"] }
ron = "0.8.0"
serde_json = "1.0.94"
log = "0.4.17"
git-version = "0.3.5"
thiserror = "1.0.39"
tui = "0.19.0"
crossterm = "0.26.1"
glob = "0.3.1"
toml = "0.7.2"
