[package]
name = "leftwm-config"
version = "0.1.1"
authors = ["BlackDragon2447 <blackdragon2447@e.email>"]
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A companion configuration utility for leftwm, a window manager for Adventurers"

[dependencies]
anyhow = {version="1.0.69", features=["backtrace"]}
clap = "4.5.41"
xdg = "3.0.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
ron = "0.12.1"
serde_json = "1.0.94"
log = "0.4.17"
git-version = "0.3.5"
thiserror = "2.0.12"
tui = "0.19.0"
crossterm = "0.29.0"
glob = "0.3.1"
toml = "1.1.2"
